# LabPod

./: .gitignore  LICENSE  README.md  pyproject.toml
src/LabPod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/labpod/: __init__.py  cli.py  protein.py  test_protein_quant.py
